--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.13.0",
     "@nuxt/ui": "^4.0.1",
+    "@prisma/nuxt": "^0.3.0",
     "@unhead/vue": "^2.0.19",
+    "bcryptjs": "^3.0.2",
     "eslint": "^9.37.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.1.3",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
