--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^9.37.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.1.3",
+    "nuxt-charts": "^0.2.4",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
